--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
-  "name": "medservice-medical-and-health-website-contents-master",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.15",
-    "normalize.css": "^8.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.7.6",
-    "css-loader": "^3.5.2",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-mixins": "^6.2.3",
-    "postcss-nested": "^4.2.1",
-    "postcss-simple-vars": "^5.0.2",
-    "style-loader": "^1.1.4",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  }
+    "name": "medservice-medical-and-health-website-contents-master",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "webpack-dev-server",
+        "build": "webpack",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "jquery": "^3.5.1",
+        "jquery-smooth-scroll": "^2.2.0",
+        "lazysizes": "^5.2.0",
+        "lodash": "^4.17.15",
+        "normalize.css": "^8.0.1",
+        "waypoints": "^4.0.1"
+    },
+    "devDependencies": {
+        "autoprefixer": "^9.7.6",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.5.2",
+        "cssnano": "^4.1.10",
+        "fs-extra": "^9.0.0",
+        "html-webpack-plugin": "^4.3.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "postcss-import": "^12.0.1",
+        "postcss-loader": "^3.0.0",
+        "postcss-mixins": "^6.2.3",
+        "postcss-nested": "^4.2.1",
+        "postcss-simple-vars": "^5.0.2",
+        "style-loader": "^1.1.4",
+        "webpack": "^4.42.1",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
+    }
 }
